kubernetes/manifests/gateway-api/httproute-dev.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-demo-dev
  namespace: dev
spec:
  parentRefs:
    - name: nexus-gateway
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dev
      backendRefs:
        - name: nginx-demo-svc
          port: 80
