kubernetes/manifests/gateway-api/httproute-prod.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-demo-prod
  namespace: prod
spec:
  parentRefs:
    - name: nexus-gateway
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prod
      backendRefs:
        - name: nginx-demo-svc
          port: 80
